<resources>
    <string name="app_name">Diudiuma</string>

    <string name="use_json">{"name":"xiafeifeng","sex":"女","age":"18"}</string>

    <string name="goods_name">物品名称</string>
    <string name="search">搜索</string>
    <string name="please_input_key">请输入关键词</string>
    <string name="goods_find_master">失物招领</string>

    <string name="add_goods">添加物品</string>
    <string name="sure">确定</string>

    <string name="change_pic">修改图片</string>

    <string name="decode_ddm">生成丢丢码</string>

    <string name="telephone">电话</string>
    <string name="personal_info">个人信息</string>
    <string name="setting">通用设置</string>
    <string name="version_update">版本更新</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="submit">提 交</string>
    <string name="date">丢失日期</string>
    <string name="is_card">是否卡类</string>
    <string name="is_certificate">是否证件</string>
    <string name="goods_tag">标签</string>

    <string name="goods_diudiu_code">丢丢码</string>
    <string name="goods_address">地址</string>
    <string name="goods_is_card">是否卡类</string>
    <string name="goods_is_credit">是否证件类</string>
    <string name="goods_tel">电话</string>
    <string name="goods_wechat">微信</string>
    <string name="goods_qq">QQ</string>
    <string name="goods_describe">描述</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="re_password">确认密码</string>
    <string name="no_data">暂无数据</string>
    <string name="load_failure">加载失败，点击重试</string>
    <string name="find_loser">失物招领</string>
    <string name="register_goods">添加物品</string>
    <string name="scan_ddm">扫描DDM</string>
    <string name="find_people">寻人启示</string>
    <string name="find_card">卡类</string>
    <string name="certification">证件类</string>
    <string name="high_reward">高额悬赏</string>
    <string name="loser_date">丢失地点</string>
    <string name="unknown">未知</string>
    <string name="find_date">拾到日期</string>
    <string name="find_address">拾到地点</string>
    <string name="back_to_loser">交还失主</string>
    <string name="find_goods">寻物启事</string>
    <string name="click_to_set">点击设置</string>
    <string name="register_date">注册日期</string>
    <string name="register_address">注册地点</string>
    <string name="default_address">武汉</string>
    <string name="reward">悬赏金额</string>
    <string name="click_to_add">点击添加</string>
    <string name="be_sure_to_register">确认添加</string>
    <string name="click_to_decode_ddm">点击生成丢丢码</string>
    <string name="ddm">丢丢码</string>
    <string name="connect_loser">联系失主</string>
    <string name="feedback_content">请写下您的宝贵意见</string>
    <string name="qq_wechat_tel">请留下您的联系方式（QQ/WeChat/Tel）</string>
    <string name="content_empty">您输入的内容为空</string>
    <string name="submit_successful">提交成功</string>
    <string name="submit_failure">提交失败</string>
    <string name="on_submitting_data">提交数据中……</string>
    <string name="my_personal_card">我的名片</string>
    <string name="edit">编辑</string>
    <string name="my_publish">我发布的</string>
    <string name="my_find_goods">我的寻物启事</string>
    <string name="my_find_loser">我的失物招领</string>
    <string name="english_name">英文名</string>
    <string name="email">邮箱</string>
    <string name="edit_with_no">否 | 点击更改</string>
    <string name="edit_with_yes">是 | 点击更改</string>
    <string name="click_to_edit">点击修改 | 添加</string>
    <string name="goods_description">物品描述</string>
    <string name="sure_queren">确认</string>
    <string name="please_input_custom_tag">请输入自定义标签名称</string>
    <string name="tag_canot_null">标签内容不可为空</string>
    <string name="test">test</string>
    <string name="cancel">取消</string>
</resources>
