<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:amos="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.shixia.diudiuma.view.CommonTitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ctv_title_view"
        amos:titleName="@string/personal_info"
        amos:btnSureText="@string/submit"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/x24">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/y50"
                android:background="@drawable/pop_quick_opt_02_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:layout_marginLeft="@dimen/x24"
                android:textColor="@color/text_color_gray"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:paddingLeft="@dimen/x24"
            android:paddingRight="@dimen/x24"
            android:id="@+id/et_name"
            android:layout_marginTop="@dimen/x24"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:textColor="@color/text_color_gray"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/y24">

            <ImageView
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/y50"
                android:background="@drawable/pop_quick_opt_01_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english_name"
                android:layout_marginLeft="@dimen/x24"
                android:textColor="@color/text_color_gray"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:paddingLeft="@dimen/x24"
            android:paddingRight="@dimen/x24"
            android:id="@+id/et_english_name"
            android:layout_marginTop="@dimen/x24"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:textColor="@color/text_color_gray"/>


        <!--电话-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/y24">

            <ImageView
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/y50"
                android:background="@drawable/pop_quick_opt_04_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone"
                android:layout_marginLeft="@dimen/x24"
                android:textColor="@color/text_color_gray"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:paddingLeft="@dimen/x24"
            android:paddingRight="@dimen/x24"
            android:id="@+id/et_tele"
            android:layout_marginTop="@dimen/x24"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:textColor="@color/text_color_gray"/>

        <!--微信-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/y24">

            <ImageView
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/y50"
                android:background="@drawable/pop_quick_opt_01_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_wechat"
                android:layout_marginLeft="@dimen/x24"
                android:textColor="@color/text_color_gray"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:paddingLeft="@dimen/x24"
            android:paddingRight="@dimen/x24"
            android:id="@+id/et_wechat"
            android:layout_marginTop="@dimen/x24"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:textColor="@color/text_color_gray"/>

        <!--QQ-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/y24">

            <ImageView
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/y50"
                android:background="@drawable/pop_quick_opt_03_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_qq"
                android:layout_marginLeft="@dimen/x24"
                android:textColor="@color/text_color_gray"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:paddingLeft="@dimen/x24"
            android:paddingRight="@dimen/x24"
            android:id="@+id/et_qq"
            android:layout_marginTop="@dimen/x24"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:textColor="@color/text_color_gray"/>

        <!--邮箱 邮箱不可修改-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/y24"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/y50"
                android:background="@drawable/pop_quick_opt_02_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginLeft="@dimen/x24"
                android:textColor="@color/text_color_gray"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/y100"
            android:paddingLeft="@dimen/x24"
            android:paddingRight="@dimen/x24"
            android:id="@+id/et_email"
            android:layout_marginTop="@dimen/x24"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:textColor="@color/text_color_gray"
            android:visibility="gone"/>


    </LinearLayout>

</LinearLayout>