<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/x680"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"
            android:background="@drawable/shape_fill_green_half_8_round"
            android:gravity="center"
            android:text="通用弹窗"
            android:textColor="@color/color_white_A"
            android:textSize="@dimen/y46" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:background="@color/grey_c" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/y320"
                android:padding="@dimen/x24"
                android:text="@string/test"
                android:textColor="@color/grey_a"
                android:textSize="@dimen/y36"
                android:background="@color/page_bg_color"
                android:gravity="center"/>

        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y2"
            android:background="@color/grey_c" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/y100"
                android:layout_weight="1"
                android:background="@drawable/selector_fill_gray_half_ld_8_round"
                android:text="@string/cancel"
                android:textColor="@color/grey_a" />

            <View
                android:layout_width="@dimen/x2"
                android:layout_height="match_parent"
                android:background="@color/grey_c"/>

            <Button
                android:id="@+id/btn_sure"
                android:layout_width="0dp"
                android:layout_height="@dimen/y100"
                android:layout_weight="1"
                android:background="@drawable/selector_fill_gray_half_rd_8_round"
                android:text="@string/sure"
                android:textColor="@color/color_green_boss" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>